--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="styles/main.css">
-    <title>Document</title>
+    <title>Tutorang India (SAT, GRE, ACT and more)</title>
 </head>
 
 <body>
@@ -34,7 +34,7 @@
     <div>
         <section class="banner">
             <div>
-                <h1>Tutorang provides one to one tutoring sessions from K1 to K12</h1>
+                <h1>Tutorang provides one to one tutoring sessions for SAT, GRE and More.</h1>
                 <h3>With One to one sessions and homework help, every student can ace. Stuck somewhere, a tutor is just
                     few clicks away!</h3>
                 <a class="waves-effect waves-light btn">Get Started</a>
@@ -54,11 +54,11 @@
 
         <div class="feature">
             <h5>
-                Various Packages available to fit your needs. Our pay as you go plan is a charm to everyone! Flexible and scales as your needs.            </h5>
+                Our pay as you go plan is a charm to everyone! Flexible and scales as your needs.            </h5>
             <img src="assets/images/payments.png">
         </div>
 
-        <div>
+        <!-- <div>
             <section class="banner vertical">
                 <img src="assets/images/student_fear.png" alt="">
                 <div>
@@ -66,16 +66,30 @@
                     <h3>That's because we have already taught 100,000+ students. </h3>
                 </div>
             </section>
-        </div>
+        </div> -->
 
         <div class="offerings">
             <h5>PRICING</h5>
-            <p>Various package available to best fit your. Stress free guidance and support throughout the academic year.
+            <p>
+                
+                Various package available to best fit your. Stress free guidance and support throughout the academic year.
                 Ensure exceptional grades with structured tailored guidance. 
                 This also includes study material and homework help synchronized with school. 
-                Includes packages for test preparation for state tests (STAAR, FSA, CAASPP, IAR, etc), ACT, SAT, OAT, GRE, GMAT</p>
-            <div class="offers">
-                <div class="offer">
+                Includes packages for test preparation for state tests (STAAR, FSA, CAASPP, IAR, etc), ACT, SAT, OAT, GRE, GMAT            
+            </p>
+
+            <div class="feature">
+                <h5>
+                    For Pricing and more info, <br>
+                    Give us a call on <a href="tel:(469) 995-9091">(469) 995-9091</a><br>
+                    Email us <a href="mailto:shefalitutorang@gmail.com">shefalitutorang@gmail.com</a>
+                </h5>
+            </div>
+
+            <!-- <div class="offers"> -->
+
+
+                <!-- <div class="offer">
                     <div class="header">
                         <span class="material-icons bronze">payment</span>
                         <p>Bronze
@@ -98,10 +112,10 @@
                             <li>Homework and project assistance</li>
                         </ol>
                     </div>
-                </div>
+                </div> -->
 
 
-                <div class="offer">
+                <!-- <div class="offer">
                     <div class="header">
                         <span class="material-icons silver">payment</span>
                         <p>Silver
@@ -124,9 +138,9 @@
                             <li>Includes homework and project assistance</li>
                         </ol>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="offer">
+                <!-- <div class="offer">
                     <div class="header">
                         <span class="material-icons gold">payment</span>
                         <p>Gold
@@ -151,9 +165,9 @@
                             <li>Includes mock tests</li>
                         </ol>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="offer">
+                <!-- <div class="offer">
                     <div class="header">
                         <span class="material-icons platinum">payment</span>
                         <p>Platinum</p>
@@ -178,8 +192,8 @@
                             <li>Includes competitive exams (STAAR/SAT/ACT etc. as is relevant) sample questions</li>
                         </ol>
                     </div>
-                </div>
-            </div>
+                </div> -->
+            <!-- </div> -->
             <div>
             </div>
 </body>
